Passive voice -> active voice when possible

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -31,7 +31,7 @@
 \affiliation{Universit\'e de Lyon, Laboratoire de Physique, \'Ecole Normale Sup\'erieure de Lyon, CNRS UMR 5672, 46 All\'ee d'Italie, 69364 Lyon cedex 07, France}
 
 \begin{abstract}
-Confined thin surfaces may wrinkle due the growth of an excess of material. Usually the wavelength is set by elasticity or gravity, but here we explore new selection mechanisms based on hydrodynamics.
+Confined thin surfaces may wrinkle due the growth of an excess of material. Usually elasticity or gravity set the wavelength, but here we explore new selection mechanisms based on hydrodynamics.
 First, inspired by yoghurt-making processes, we use caseins, a family of milk proteins, as pH-responsive building blocks and the acidulent glucono-$\delta$-lactone, to design a porous biogel film immersed in a confined buoyancy-matched viscous medium.
 Provided specific boundary conditions, but without any external stimulus, the biogel film spontaneously wrinkles in cascade.
 Second, using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that, during continuous acidification, the gel first shrinks and then swells, inducing wrinkling. 
@@ -48,7 +48,7 @@ Third, taking into account both Darcy flow through the gel and Poiseuille flow i
 
 %There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. On the engineering side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling or the removal of pre-strain. On the biology side wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side analogues of wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002}. Since in practice gravity sets the wavelength in such situation~\cite{Smoluchowski1910}, the wrinkling on a confined viscous substrate has not been studied experimentally.
 
-There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries and wrinkles when buckling is hindered by a substrate. The selection of the preferred wrinkling wavelength is peculiar to the situation and is related to the mismatch of elastic properties between the surface and the substrate~\cite{Gough1940, Bijlaard1946, Biot1957, Bowden1998, Cerda2003, Genzer2006}. On the biology side wrinkling-controlled morphogenesis is ubiquitous. Ageing and the loss of elastic fibres makes our skin wrinkle~\cite{Bissett1987, Genzer2006}. Difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}. Localised cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation~\cite{Bowden1998}, swelling~\cite{Hu1998,Kim2010} or the removal of pre-strain~\cite{Genzer2006}. 
+There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries and wrinkles when a substrate hinders buckling. The selection of the preferred wrinkling wavelength is peculiar to the situation and is related to the mismatch of elastic properties between the surface and the substrate~\cite{Gough1940, Bijlaard1946, Biot1957, Bowden1998, Cerda2003, Genzer2006}. On the biology side wrinkling-controlled morphogenesis is ubiquitous. Ageing and the loss of elastic fibres makes our skin wrinkle~\cite{Bissett1987, Genzer2006}. Difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}. Localised cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation~\cite{Bowden1998}, swelling~\cite{Hu1998,Kim2010} or the removal of pre-strain~\cite{Genzer2006}. 
 
 %ph swelling: hu_1998_Polymer gels with engineered environmentally and kim_2010_Dynamic display of biomolecular patterns
 %compressive stress: kim_2011_Hierarchical folding of elastic membranes under
@@ -57,9 +57,9 @@ There are many ways and reasons for a film to wrinkle. An elastic film buckles d
 Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situations. Indeed, stability analysis of a film lying on a thin viscous substrate was performed only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, however, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength~\cite{Fleury2015}. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. The main goal of the present study is therefore threefold: to create a buoyancy-matched material that wrinkles, to unveil the physical origin of the observed patterns and to identify the selection mechanism of the wavelength.
 
 Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. 
-As a biogel, we use a simplified yoghurt obtained by the slow acidification of caseins, a family of milk proteins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, the casein dispersion is injected in a home-made optical cell that is then sealed. This cell is designed such that the casein adhesion to both top and bottom walls is turned off and so that the gel is only anchored to the remaining four vertical sides of the cell.
+As a biogel, we use a simplified yoghurt obtained by the slow acidification of caseins, a family of milk proteins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, the casein dispersion is injected in a home-made optical cell that is then sealed. We design this cell such that the casein adhesion to both top and bottom walls is turned off and so that the gel is only anchored to the remaining four vertical sides of the cell.
 %
-Although no external stimulus is exerted on the system, we observe the spontaneous formation of a wrinkling pattern, as shown in Figure~\ref{fig:dynamics} and Supplementary Videos~S\ref{S-vid:transmitted} and S\ref{S-vid:reconstructed}. This pattern shows unique properties: a primary pattern appears simultaneously throughout the system with a wavelength $\lambda$  that is much smaller than the cell width $L$ and does not evolve with time. Furthermore, within this primary pattern, secondary and ternary patterns appear in cascade.
+Although no external stimulus is exerted on the system, we observe the spontaneous formation of a wrinkling pattern, as shown in Figure~\ref{fig:dynamics} and Supplementary Videos~S\ref{S-vid:transmitted} and S\ref{S-vid:reconstructed}. This pattern shows unique properties: a primary pattern appears simultaneously throughout the system with a wavelength $\lambda$ that is much smaller than the cell width $L$ and does not evolve with time. Furthermore, within this primary pattern, secondary and ternary patterns appear in cascade.
 Using a combination of titration, rheology, light microscopy and confocal microscopy, we demonstrate that the wrinkles at the millimetre scale result from the spontaneous swelling of the casein network at the micron level upon acidification.
 %
 Finally we show that the wavelength is selected by a purely viscous mechanism combining porous Darcy flow and viscous Poiseuille flow. We systematically checked that this combined model pins down the dynamical origin of the constraints exerted on the gel and nicely predicts the wrinkling wavelength under a wide range of conditions.
@@ -77,7 +77,7 @@ Finally we show that the wavelength is selected by a purely viscous mechanism co
 
 To form a biogel we start from an aqueous dispersion of caseins and glucono-$\delta$-lactone (GDL). GDL slowly acidifies the medium and triggers gelation of the caseins~\cite{Roefs1986,Bremer1989,Lucey1998,Dickinson2002}. While still liquid, this yoghurt-forming suspension is injected into a home-made optical cell, as sketched in Figure~\ref{fig:dynamics}a. The cell is sealed and no external stimulus is applied during gelation or pattern formation. Both top and bottom walls are coated with acrylamide brushes, effectively turning off the casein adhesion, so that the gel is only anchored to the remaining four vertical sides of the cell.
 
-The dynamics of the pattern formation are followed by light transmission microscopy and confocal microscopy, see Materials and Methods. As shown in Figure~\ref{fig:dynamics}b and Supplementary Video~S\ref{S-vid:transmitted}, we observe the spontaneous formation of a first pattern that appears with a characteristic wavelength $\lambda\ll L$. The 2D shape and size of this primary pattern are set as soon as the pattern forms and do not evolve in time. However inside the primary pattern a secondary pattern emerges, inside which a ternary forms. At each step of this Russian dolls-like cascade, the wavelength is divided by two, as shown in Supplementary Figure~S\ref{S-fig:generations}.
+We follow the dynamics of the pattern formation by light transmission microscopy and confocal microscopy, see Materials and Methods. As shown in Figure~\ref{fig:dynamics}b and Supplementary Video~S\ref{S-vid:transmitted}, we observe the spontaneous formation of a first pattern that appears with a characteristic wavelength $\lambda\ll L$. The 2D shape and size of this primary pattern are set as soon as the pattern forms and do not evolve in time. However inside the primary pattern a secondary pattern emerges, inside which a ternary forms. At each step of this Russian dolls-like cascade, the wavelength is divided by two, as shown in Supplementary Figure~S\ref{S-fig:generations}.
 
 3D confocal microscopy, as shown in Figure~\ref{fig:dynamics}c and Supplementary Video~S\ref{S-vid:reconstructed}, reveals that those patterns actually correspond to wrinkles of the biogel film. Figure~\ref{fig:sideview}a shows successive side views of the same confocal measurements as in  Figure~\ref{fig:dynamics}c, see also Supplementary Videos~S\ref{S-vid:cutDarcy} and S\ref{S-vid:cutPoiseuille}. Initially the dispersion is homogeneous and fills the entire slit. The black margins in Figure~\ref{fig:sideview}a correspond to the glass walls. Around \SI{23}{\minute}, the gel forms and simultaneously becomes thinner and more concentrated --the fluorescence signal which is proportional to the casein concentration is brighter compared to the initial situation. This effect is the fingerprint of syneresis: as gelation proceeds, solvent is expelled through both the upper and lower sides of the gel film.
 
@@ -97,7 +97,7 @@ Therefore contrary to observations in, e.g., Ref~\cite{Yoo2003}, we do not repor
 Based on those observations, we examine possible scenarios upon shrinking and swelling of the gel. As the gel forms it expels the solvent and detaches from top and bottom wall, see Figure~\ref{fig:dilation}b and c. For the swelling back we consider three options: 
 
 \noindent
-(i) In Figure~\ref{fig:dilation}d, the swelling back is reversible, only releasing tensile stresses accumulated during shrinking, and the layer remains flat, as expected for chemical gels~\cite{Kim2010}. Since this case is not observed it means that in this physical gel, syneresis and swelling processes foster irreversible stress dissipation and structural changes. In the following, we will therefore consider that the shrunk state is stress-free. 
+(i) In Figure~\ref{fig:dilation}d, the swelling back is reversible, only releasing tensile stresses accumulated during shrinking, and the layer remains flat, as expected for chemical gels~\cite{Kim2010}. Since we do not observe this case, it means that in this physical gel, syneresis and swelling processes foster irreversible stress dissipation and structural changes. In the following, we will therefore consider that the shrunk state is stress-free. 
 
 \noindent
 (ii) In Figure~\ref{fig:dilation}e, we assume that nothing hinders the buckling of the gel film. This simple buckling situation leads to a primary pattern composed of a single bump of size $L$. As the bump amplitude grows larger \textcolor{blue}{and} saturates on the top and bottom wall, buckling of smaller wavelength may appear, as observed by~\cite{Roman1999}. This is also not what we observe since our primary wavelength $\lambda$ is much smaller that $L$.
@@ -206,12 +206,12 @@ To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*
 
 \subsection*{Experimental tests}
 
-For a typical gel film, the buoyancy after syneresis is estimated from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ which confirms that gravity can be neglected as already inferred from test experiments where the cell is held vertically rather than horizontally.
+For a typical gel film, we estimate the buoyancy after syneresis from the initial sodium caseinate mass concentration $C_\text{cas}$ as $\Delta\rho=C_\text{cas} e/h = \SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$ which confirms that gravity can be neglected as already inferred from test experiments where the cell is held vertically rather than horizontally.
 
 
 Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them, see Supplementary Materials about such measurements. As summarised in Supplementary Table~S\ref{S-tab:data} we systematically vary (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacts the gel stiffness, permeability and $\tau$. Finally, the only parameter that we have no control upon is the initial altitude $H$ of the gel before wrinkling that varies randomly. 
 
-For each experiment we measure independently $\lambda$ and all the parameters that go into the expressions of $\lambda_D$, Equation~(\ref{eq:prefDarcy}) and $\lambda_P$, Equation~(\ref{eq:prefPoiseuille}). $\lambda$ is measured by optical microscopy; $e$, $h$, $H_1$, $H_2$, $\tau$ are measured by confocal microscopy; $\alpha$ is measured via capillary experiment and $B$ by rheology, see Materials and Methods and Supplementary Materials.
+For each experiment we measure independently $\lambda$ and all the parameters that go into the expressions of $\lambda_D$, Equation~(\ref{eq:prefDarcy}) and $\lambda_P$, Equation~(\ref{eq:prefPoiseuille}). We measure $\lambda$ by optical microscopy; $e$, $h$, $H_1$, $H_2$, $\tau$ by confocal microscopy; $\alpha$ by capillary rise experiment and $B$ by rheology, see Materials and Methods and Supplementary Materials.
 
 
 The beauty of this approach is that it is not only valid to model the primary wavelength, but that it describes also the growth of the secondary pattern. Although the wavelength $\lambda_2$ of the secondary pattern is fully determined by the primary pattern $\lambda_2 = \lambda_1/2$, Figure~\ref{fig:dynamics} and Supplementary Figure~S\ref{S-fig:generations}, the secondary pattern has its own dynamics with its own characteristic time $\tau_2\neq\tau_1$. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Therefore, we are able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones.
@@ -230,13 +230,13 @@ To conclude we have taken advantage of the properties of the casein protein to e
 
 \section*{Materials and Methods}
 
-Sodium caseinate (Firmenich) is dissolved in deionised water by stirring for \SI{20}{\minute} at room temperature. The mixing of the caseine dispersion with glucono-$\delta$-lactone (GDL) in powder (Firmenich) sets the beginning of the experiments. We typically have about \SI{10}{\minute} to pipet the dispersion into the slit before gelation starts. Sodium caseinate (Firmenich) is labelled with Dylight~550 NHS ESTER (Thermo Scientific). Excess dye is removed by centrifugation. For confocal microscopy measurements, we add 10\% of fluorescently labelled caseins to the casein/GDL dispersion while it is fluid.
+We dissolve sodium caseinate (Firmenich) in deionised water by stirring for \SI{20}{\minute} at room temperature. The mixing of the caseine dispersion with glucono-$\delta$-lactone (GDL) in powder (Firmenich) sets the beginning of the experiments. We typically have about \SI{10}{\minute} to pipet the dispersion into the slit before gelation starts. We label sodium caseinate (Firmenich) with Dylight~550 NHS ESTER (Thermo Scientific). Excess dye is removed by centrifugation. For confocal microscopy measurements, we add 10\% of fluorescently labelled caseins to the casein/GDL dispersion while it is fluid.
 
-Home made optical cells are composed of a slide (RS) and a cover slip (Menzel-Gl\"aser) spaced by paraffin film (Parafilm). The optical cell is briefly heated on a hot plate so that the paraffin welds to the slide and the cover slip. Gently applying a pressure on the cover slip while being heated allows us to tune the thickness of the cell from \SIrange{50}{150}{\micro\metre}. The slit is filled with the casein dispersion, immediately sealed using ultraviolet-cured glue (Norland Optical) and placed under the microscope before gelation can take place. To prevent adsorption of caseins to surfaces, microscope slides and cover slips used to make microscopy cells are cleaned and subsequently coated with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) from which a polyacrylamide brush is polymerised from methacrylate groups (Euromedex).
+Home made optical cells are composed of a slide (RS) and a cover slip (Menzel-Gl\"aser) spaced by paraffin film (Parafilm). We heat briefly the optical cell on a hot plate so that the paraffin welds to the slide and the cover slip. We tune the thickness of the cell from \SIrange{50}{150}{\micro\metre} by gently applying a pressure on the cover slip during heating. We fill the slit with the casein dispersion, and immediately seal it using ultraviolet-cured glue (Norland Optical) and place it under the microscope before gelation can take place. To prevent adsorption of caseins to surfaces, we clean microscope slides and cover slips used to make microscopy cells and subsequently coat them with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) from which we polymerise a polyacrylamide brush from methacrylate groups (Euromedex).
 
-3D data are collected on a Zeiss LSM510 confocal microscope using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling, see Supplementary Material, or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) are used to measure the wavelength of the primary pattern, Supplementary Figures~S\ref{S-fig:generations} and S\ref{S-fig:patterns}. The secondary pattern wavelength is taken as half of the primary wavelength, according to Supplementary Figure~S\ref{S-fig:generations}.
-Data shown in Figure~\ref{fig:acidification}a and c are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar). For every gel composition we monitor the gelation by small amplitude oscillations (strain 0.1\%, frequency \SI{1}{\hertz}) and estimate the flexural modulus $B$ from the maximum value of the shear modulus $G^\prime$ as $B=2G^\prime/(1-\nu)$ taking $\nu=0.3$ for the Poisson ratio, a value typical of a spongy network~\cite{Greaves2011}.
-Permeability is measured using a protocol found in \cite{VanDijk1986}, see Supplementary Method and Supplementary Figure~S\ref{S-fig:permeability}. The amount of free casein protein present in the gel during the GDL acidification process is measured by titration and UV-spectrometry (Ocean Optics) according to the protocol found in~\cite{Roefs1986} and detailed in Supplementary Method.
+We collect 3D data on a Zeiss LSM510 confocal microscope using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling, see Supplementary Material, or a 63x (oil) lens to observe the microstructure of the gel. We use larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000), to measure the wavelength of the primary pattern, Supplementary Figures~S\ref{S-fig:generations} and S\ref{S-fig:patterns}. We take the secondary pattern wavelength as half of the primary wavelength, according to Supplementary Figure~S\ref{S-fig:generations}.
+We obtain data shown in Figure~\ref{fig:acidification}a with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar). For every gel composition we monitor the gelation by small amplitude oscillations (strain 0.1\%, frequency \SI{1}{\hertz}) and estimate the flexural modulus $B$ from the maximum value of the shear modulus $G^\prime$ as $B=2G^\prime/(1-\nu)$ taking $\nu=0.3$ for the Poisson ratio, a value typical of a spongy network~\cite{Greaves2011}.
+We measure permeability using a protocol found in \cite{VanDijk1986}, see Supplementary Method and Supplementary Figure~S\ref{S-fig:permeability}. We measure the amount of free casein protein present in the gel during the GDL acidification process by titration and UV-spectrometry (Ocean Optics) according to the protocol found in~\cite{Roefs1986} and detailed in Supplementary Method.
 
 \bibliographystyle{Science}
 \bibliography{Yaourt}
