--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -10,6 +10,10 @@
 %\usepackage{dcolumn,ulem}
 \usepackage{amsfonts}
 
+%Science style citations
+\setcitestyle{round}
+\renewcommand{\citenumfont}{\textit}
+
 
 \definecolor{Main}{rgb}{1, 0.57, 0}
 \definecolor{Accent1}{rgb}{1,0.28,0}
