page numbers in footer

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -10,6 +10,8 @@
 %\usepackage{dcolumn,ulem}
 \usepackage{amsfonts}
 
+\pagestyle{plain}
+
 %Science style citations
 \setcitestyle{round}
 \renewcommand{\citenumfont}{\textit}
@@ -244,6 +246,9 @@ We measure permeability using a protocol found in \cite{VanDijk1986}, see Supple
 
 \bibliographystyle{Science}
 \bibliography{Yaourt}
+
+\paragraph*{Competing Interests}
+The authors declare that they have no competing interests.
 
 \paragraph*{Acknowledgements}
 Confocal experiments were conducted at SFR BioSciences Gerland - Lyon Sud (US8 / UMS3444).
