Modifs Seb American English

--- a/fig_plis/supplementary_plis.tex
+++ b/fig_plis/supplementary_plis.tex
@@ -36,8 +36,8 @@ amsmath,amssymb,prl]{revtex4-1}
 \author{Mathieu Leocmach}
 \affiliation{Universit\'e de Lyon, Laboratoire de Physique, \'Ecole Normale Sup\'erieure de Lyon, CNRS UMR 5672, 46 All\'ee d'Italie, 69364 Lyon cedex 07, France}
 \author{Mathieu Nespoulous}
-\affiliation{Aix-Marseille Université, CNRS, MADIREL UMR 7246, Marseille, France}
-\author{Sébastien Manneville}
+\affiliation{Aix-Marseille Universit\'e, CNRS, MADIREL UMR 7246, Marseille, France}
+\author{S\'ebastien Manneville}
 \affiliation{Universit\'e de Lyon, Laboratoire de Physique, \'Ecole Normale Sup\'erieure de Lyon, CNRS UMR 5672, 46 All\'ee d'Italie, 69364 Lyon cedex 07, France}
 \author{Thomas Gibaud}
 \email{thomas.gibaud@ens-lyon.fr}
@@ -69,7 +69,7 @@ amsmath,amssymb,prl]{revtex4-1}
 
 To measure the wrinkle wavelength $\lambda$, we use large field pictures of the final state. These picture are obtained either by stitching fluorescent microscopy images obtained at 10x magnification, Supplementary Figure~\ref{fig:patterns} except c and e, or by transmitted or reflected light macroscope at magnifications ranging from 1x to 6x, Supplementary Figure~\ref{fig:patterns}c and e. The contrast in such pictures is a measure of the magnitude of the altitude gradient of the gel film. White lines in fluorescence and reflection (respectively black lines in transmission) denote a sharp transition between two extreme altitudes (on top wall or on bottom wall). It is thus possible to reconstruct a binary picture of the pattern, inset of Supplementary Figure~\ref{fig:generations}. Furthermore since the shape and size of a given generation of pattern do not change after formation, it is possible to revert the final binary picture to the configuration of the primary pattern.
 
-Figure~\ref{fig:generations} shows Fourier spectra of binarised altitudes at different times. When only the first generation pattern is present a peak clearly indicates the dominant mode. When the secondary pattern has appeared, the dominant wavelength is halved and the peak much weaker. This allows us to use the secondary pattern is our analysis by setting their wavelength to half of the primary wavelength. Further generations do not seem to appear simultaneously and the corresponding peaks are weak and broad.
+Figure~\ref{fig:generations} shows Fourier spectra of binarized altitudes at different times. When only the first generation pattern is present a peak clearly indicates the dominant mode. When the secondary pattern has appeared, the dominant wavelength is halved and the peak much weaker. This allows us to use the secondary pattern is our analysis by setting their wavelength to half of the primary wavelength. Further generations do not seem to appear simultaneously and the corresponding peaks are weak and broad.
 
 \subsection*{Confocal images processing}
 
@@ -89,7 +89,7 @@ where $z(x,y,t)$ is the altitude of the mid surface of the gel.
 
 \subsection*{Fraction of free casein as a function of pH}
 
-The fraction of free casein proteins of a \SI{100}{\milli\litre}, 4\%w sodium caseinate dispersion is obtained either by titration by 1 molar HCl, see Supplementary Video~\ref{vid:titration}, or during the action of 4\%w GDL. In both cases, \SI{0.4}{\milli\litre} of the \SI{100}{\milli\litre} dispersion is sampled regularly as a function of pH, and centrifuged (centrifuge 5424, Eppendorf) in Eppendorf tubes at 14500 rpm for \SI{3}{\minute}. The supernatant is diluted and analysed with a UV absorption spectrometer (USB4000, Ocean Optics). According to~\cite{Roefs1986}, we deduce the fraction of free casein proteins from the adsorption spectrum as:
+The fraction of free casein proteins of a \SI{100}{\milli\litre}, 4\%w sodium caseinate dispersion is obtained either by titration by 1 molar HCl, see Supplementary Video~\ref{vid:titration}, or during the action of 4\%w GDL. In both cases, \SI{0.4}{\milli\litre} of the \SI{100}{\milli\litre} dispersion is sampled regularly as a function of pH, and centrifuged (centrifuge 5424, Eppendorf) in Eppendorf tubes at 14500 rpm for \SI{3}{\minute}. The supernatant is diluted and analyzed with a UV absorption spectrometer (USB4000, Ocean Optics). According to~\cite{Roefs1986}, we deduce the fraction of free casein proteins from the adsorption spectrum as:
 %
 \begin{align}
 x_\text{free} &= \frac{A(\text{pH})}{A(\text{pH}=7)},\\
@@ -141,7 +141,7 @@ where $\Delta P=\rho g(z_\infty-z(t))$ is the hydrostatic pressure drop through 
 \frac{d(z-z_\infty)}{dt} = -\frac{z-z_\infty}{\tau}\text{, with\,} \tau = \frac{\eta H}{\alpha \rho g}.
 \end{equation}
 
-By fitting $z(t)-z_\infty$ to an exponential, see Supplementary Figure~\ref{fig:permeability} b-c, we obtain $\tau$ and thus $\alpha$. Note that even with $H$ of the order of a few millimetres high glycerol contents yield $\tau\approx \SI{100}{\hour}$ due to both high viscosity and low permeability. Obtaining $z_\infty$ without tube 2 would be time prohibitive.
+By fitting $z(t)-z_\infty$ to an exponential, see Supplementary Figure~\ref{fig:permeability} b-c, we obtain $\tau$ and thus $\alpha$. Note that even with $H$ of the order of a few millimeters high glycerol contents yield $\tau\approx \SI{100}{\hour}$ due to both high viscosity and low permeability. Obtaining $z_\infty$ without tube 2 would be time prohibitive.
 
 
 
@@ -260,7 +260,7 @@ The dominant wavelength for Darcy model is thus
 \begin{equation}
 \lambda_D = 2\pi h^{1/2}\alpha^{1/4}\left(\frac{\Upsilon}{12}\right)^{1/4}.
 \end{equation}
-Here also the dominant mode maximises the growth rate.
+Here also the dominant mode maximizes the growth rate.
 
 
 \subsubsection*{Porous elastic film between two viscous layers}
