Add links to youtube videos

--- a/fig_plis/article_SI.tex
+++ b/fig_plis/article_SI.tex
@@ -561,24 +561,24 @@ i & 4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 
 \begin{enumerate}
 \renewcommand{\labelenumi}{\textbf{Video \arabic{enumi}:}}
 \itemindent 8mm
-\item\label{vid:transmitted} Transmitted light microscopy images of the pattern formation in a 4\%w casein and 4\%w GDL aqueous dispersion. Top and bottom slides of the optical cell are coated with acrylamide brushes. The total duration of the Video is \SI{2}{\hour}~30. The scale bar is \SI{1}{\milli\metre}.
+\item\label{vid:transmitted} \href{https://youtu.be/KsSRDUxmmbo}{Transmitted light microscopy} images of the pattern formation in a 4\%w casein and 4\%w GDL aqueous dispersion. Top and bottom slides of the optical cell are coated with acrylamide brushes. The total duration of the Video is \SI{2}{\hour}~30. The scale bar is \SI{1}{\milli\metre}.
 
-\item\label{vid:reconstructed} 3D reconstruction of the pattern formation using confocal microscopy in a 4\%w casein and 4\%w GDL aqueous dispersion, Supplementary Table~\ref{tab:data}c. 10\% of the proteins are fluorescently labelled. Top and bottom slides of the optical cell are coated with acrylamide brushes. The total duration of the Video is \SI{2}{\hour}~30. The scale bar is \SI{1}{\milli\metre}.
+\item\label{vid:reconstructed} \href{https://youtu.be/EI4K2akmhL8}{3D reconstruction} of the pattern formation using confocal microscopy in a 4\%w casein and 4\%w GDL aqueous dispersion, Supplementary Table~\ref{tab:data}c. 10\% of the proteins are fluorescently labelled. Top and bottom slides of the optical cell are coated with acrylamide brushes. The total duration of the Video is \SI{2}{\hour}~30. The scale bar is \SI{1}{\milli\metre}.
 
 
 %\item[Video 3] Titration of a dispersion with 1\%w casein by 1 molar HCl. The duration of the Video is \SI{13}{\minute}. The scale bar is XXX $\mu$m
 
 
-\item\label{vid:titration} Titration of a dispersion with 4\%w casein by 1 molar HCl. The total duration of the Video is \SI{14}{\minute}. The Becher diameter is \SI{55}{\milli\metre}.
+\item\label{vid:titration} \href{https://youtu.be/t6_vnQmzais}{Titration} of a dispersion with 4\%w casein by 1 molar HCl. The total duration of the Video is \SI{14}{\minute}. The Becher diameter is \SI{55}{\milli\metre}.
 
 
-\item\label{vid:stick63} Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when sticky boundary are on. 10\% of the proteins are fluorescently labelled. The total duration of the Video is \SI{132}{\minute}. The scale bar is \SI{10}{\micro\metre}.
+\item\label{vid:stick63} Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when \href{https://youtu.be/64ntew44Uy4}{sticky boundary are on}. 10\% of the proteins are fluorescently labelled. The total duration of the Video is \SI{132}{\minute}. The scale bar is \SI{10}{\micro\metre}.
 
-\item\label{vid:nostick63} Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when the top wall is coated with acrylamide brushes and the bottom wall remains sticky. 10\% of the proteins are fluorescently labelled. The total duration of the Video is \SI{147}{\minute}. The scale bar is \SI{10}{\micro\metre}.
+\item\label{vid:nostick63} Confocal microscopy $(x,y)$ cut of the evolution of the local structure of a 4\%w casein and 4\%w GDL aqueous dispersion when \href{https://youtu.be/3UFrgvDk2eM}{the top wall is coated with acrylamide brushes and the bottom wall remains sticky}. 10\% of the proteins are fluorescently labelled. The total duration of the Video is \SI{147}{\minute}. The scale bar is \SI{10}{\micro\metre}.
 
-\item\label{vid:cutDarcy} Confocal microscopy $(x,z)$ cut of the evolution of the gel film deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}a. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies close to the bottom wall, $H<H^*$. Darcy mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{145}{\minute}.
+\item\label{vid:cutDarcy} \href{https://youtu.be/Z2wOHFEpfhc}{Confocal microscopy $(x,z)$ cut} of the evolution of the gel film deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}a. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies close to the bottom wall, $H<H^*$. Darcy mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{145}{\minute}.
 
-\item\label{vid:cutPoiseuille} Confocal microscopy $(x,z)$ cut of the evolution of the gel film deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}c. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies far from either top or bottom wall, $H>H^*$. Poiseuille mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{181}{\minute}.
+\item\label{vid:cutPoiseuille} \href{https://youtu.be/fkJeP_VpbdM}{Confocal microscopy $(x,z)$ cut} of the evolution of the gel film deflection of a 4\%w casein and 4\%w GDL aqueous dispersion when both top and bottom walls are coated with acrylamide brushes, Supplementary Table~\ref{tab:data}c. 10\% of the proteins are fluorescently labelled. The scale bar is \SI{100}{\micro\metre} (with a pixel size ratio of 1.3). Here the gel initially lies far from either top or bottom wall, $H>H^*$. Poiseuille mechanism dominates the formation of the primary pattern. The total duration of the video is \SI{181}{\minute}.
 
 \end{enumerate}
 
