--- a/fig_plis/supplementary_plis.tex
+++ b/fig_plis/supplementary_plis.tex
@@ -238,6 +238,13 @@ When the elastic film is sandwiched between two viscous layers of respective thi
 \end{equation}
 This corresponds to the experimental case where the gel film is far from both of the cell walls. Since we have an almost buoyant gel and no more free surface, gravity can indeed be neglected.
 
+Combining equations~(\ref{eq:sigma0P}) and (\ref{eq:qP}) we obtain the minimal stress to observe buckling
+\begin{equation}
+\sigma_\parallel = \frac{h}{H}  B  \left(\frac{24}{\Upsilon}\right)^{1/3}.
+\end{equation}
+
+Let us compare $\sigma_\parallel$ to the stress induced by swelling $\sigma_s$ for a sample abiding to Poiseuille model: sample c in Table~\ref{tab:data}. From the previous equation, we obtain $\sigma_\parallel \approx \SI{9}{\pascal}$. On the other hand, we estimate $\sigma_s = B\gamma$ where $\gamma$ is the strain induced by swelling. For the same sample, Figure \ref{M-fig:sideview}c gives us the excess area $\epsilon$ as a function of time. The first reliable measure of $\gamma = \sqrt{\epsilon}$ after buckling is 2.5\% at $t=\SI{35}{\minute}$. Therefore, the stress induced by swelling is $\sigma_s \approx \SI{35}{\pascal}$, indeed sufficient to cause buckling.
+
 \subsubsection*{Porous elastic film with no possible Poiseuille flow}
 Another limiting case is that of a porous elastic film immersed in a viscous medium where longitudinal resistance to flow is infinite. It is the case in our experiments when the film is at contact with one of the walls. The only way to deform the film is to flow some liquid through the film of permeability $\alpha$. The transverse load derives from the Darcy law:
 \begin{equation}
